force-app/main/default/objects/Enrollment__c/fields/Session_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Session_de_formation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session de formation</label>
    <referenceTo>Training_Session_c__c</referenceTo>
    <relationshipLabel>Inscriptions</relationshipLabel>
    <relationshipName>Inscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>