force-app/main/default/objects/Enrollment__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Confirmée</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>